# routes.js
@@ -1,6 +1,7 @@
 import { getReadedPublicFile } from './shared/utils/get-readed-public-file.js';
 import { authController } from './auth/auth.controller.js';
 import { chatController } from './chats/chat.controller.js';
+import { messagesController } from './messages/messages.controller.js';
 
 export const pagesRoutes = [
   {
@@ -29,4 +30,4 @@ export const pagesRoutes = [
   },
 ];
 
-export const apiRoutes = [...authController, ...chatController];
+export const apiRoutes = [...authController, ...chatController, ...messagesController];
